# OBEC-Plotting-Standard

./: .gitignore  README.md  app.py  config.example.yaml  config.yaml  pyproject.toml  requirements.txt  run_windows.bat  setup_linux.sh  setup_windows.bat
dataProc/output/: batch_summary.csv  batch_summary.xlsx
dataProc/output/P37_10L_N-Al_Formation_-_062/data/: P37_10L_N-Al_Formation_-_062.xlsx  cleaned_timeseries.csv  cycle_summary.csv
dataProc/output/P38_10L_N-Al_Formation_-_063/data/: P38_10L_N-Al_Formation_-_063.xlsx  cleaned_timeseries.csv  cycle_summary.csv
dataProc/output/P39_8L_N-Al_Formation_-_060/data/: P39_8L_N-Al_Formation_-_060.xlsx  cleaned_timeseries.csv  cycle_summary.csv
input/: README.txt
src/batteryplot/: __init__.py  aliases.py  cli.py  config.py  excel_export.py  io.py  parsing.py  placeholders.py  reader.py  styles.py  summaries.py  transforms.py
src/batteryplot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/batteryplot/plots/: __init__.py  cycle_summary.py  pulse_resistance.py  qa.py  ragone.py  rate_capability.py  registry.py  voltage_profiles.py
src/batteryplot/utils/: __init__.py  logging_utils.py  paths.py  validation.py
tests/: test_aliases.py  test_config.py  test_fuzzy_guess.py  test_integration.py  test_parser.py  test_parsing.py  test_placeholders.py  test_reader.py  test_registry.py  test_transforms.py
