[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "batteryplot"
version = "0.1.0"
description = "Battery test data plotting and analysis toolkit"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "openpyxl>=3.1",
    "typer[all]>=0.9",
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "rich>=13.0",
]

[project.scripts]
batteryplot = "batteryplot.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
